add_library(basic_gates basic_gates.h basic_gates.cpp)

add_library(adder adder.h adder.cpp)
target_link_libraries(adder basic_gates)
target_link_libraries(adder pin_board)

add_library(mux mux.h mux.cpp)
target_link_libraries(mux basic_gates)
target_link_libraries(mux pin_board)

add_library(logic_cal logic_cal.h logic_cal.cpp)
target_link_libraries(logic_cal basic_gates)
target_link_libraries(logic_cal pin_board)

add_library(left_shifter left_shifter.h left_shifter.cpp)
target_link_libraries(left_shifter basic_gates)
target_link_libraries(left_shifter pin_board)
target_link_libraries(left_shifter mux)

add_library(right_shifter right_shifter.h right_shifter.cpp)
target_link_libraries(right_shifter basic_gates)
target_link_libraries(right_shifter pin_board)
target_link_libraries(right_shifter mux)

add_library(chip_test_util chip_test_util.h chip_test_util.cpp)
target_link_libraries(chip_test_util gtest)

add_executable(basic_gates_test basic_gates_test.cpp)
target_link_libraries(basic_gates_test basic_gates)
target_link_libraries(basic_gates_test pin_board)
target_link_libraries(basic_gates_test gtest_main)
target_link_libraries(basic_gates_test chip_test_util)
add_test(basic_gates_test basic_gates_test --gtest_color=yes)

add_executable(xor_gate_test xor_gate_test.cpp)
target_link_libraries(xor_gate_test basic_gates)
target_link_libraries(xor_gate_test pin_board)
target_link_libraries(xor_gate_test chip_test_util)
target_link_libraries(xor_gate_test gtest_main)
add_test(xor_gate_test xor_gate_test --gtest_color=yes)

add_executable(adder_test adder_test.cpp)
target_link_libraries(adder_test basic_gates)
target_link_libraries(adder_test pin_board)
target_link_libraries(adder_test adder)
target_link_libraries(adder_test gtest_main)
target_link_libraries(adder_test chip_test_util)
add_test(adder_test adder_test --gtest_color=yes)

add_executable(mux_test mux_test.cpp)
target_link_libraries(mux_test basic_gates)
target_link_libraries(mux_test pin_board)
target_link_libraries(mux_test mux)
target_link_libraries(mux_test gtest_main)
target_link_libraries(mux_test chip_test_util)
add_test(mux_test mux_test --gtest_color=yes)

add_executable(logic_cal_test logic_cal_test.cpp)
target_link_libraries(logic_cal_test basic_gates)
target_link_libraries(logic_cal_test pin_board)
target_link_libraries(logic_cal_test logic_cal)
target_link_libraries(logic_cal_test gtest_main)
target_link_libraries(logic_cal_test chip_test_util)
add_test(logic_cal_test logic_cal_test --gtest_color=yes)

add_executable(left_shifter_test left_shifter_test.cpp)
target_link_libraries(left_shifter_test basic_gates)
target_link_libraries(left_shifter_test pin_board)
target_link_libraries(left_shifter_test left_shifter)
target_link_libraries(left_shifter_test gtest_main)
target_link_libraries(left_shifter_test chip_test_util)
add_test(left_shifter_test left_shifter_test --gtest_color=yes)

add_executable(right_shifter_test right_shifter_test.cpp)
target_link_libraries(right_shifter_test basic_gates)
target_link_libraries(right_shifter_test pin_board)
target_link_libraries(right_shifter_test right_shifter)
target_link_libraries(right_shifter_test gtest_main)
target_link_libraries(right_shifter_test chip_test_util)
add_test(right_shifter_test right_shifter_test --gtest_color=yes)
